--- a/resources/assets/sass/Home/Hero.scss
+++ b/resources/assets/sass/Home/Hero.scss
@@ -3,7 +3,8 @@
   background: #0f1c4d;
   background: linear-gradient(#080808, #000339ba, #080808), url('/img/retro-bg.jpg');
   background-position: center;
-  background-size: 15%;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   .hero-bg {
     margin: 0 auto;
@@ -81,6 +82,7 @@
       .rbp-img2{
         justify-content: center;
             margin: 0 20px;
+            padding-bottom: 20px;
         h2{
           font-size: 2rem;
           text-align: center;
