--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -3,6 +3,8 @@
 body {
   opacity: 0;
   transition: opacity 0.2s linear 0.2s;
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
 #app {
