--- a/resources/views/apply.edge
+++ b/resources/views/apply.edge
@@ -10,9 +10,7 @@
 </head>
 <body>
   <style> body{opacity: 1;}</style>
-  <div id="app">
-
-  </div>
+  <div id="app"></div>
   <script src="/js/components/vendor.js"></script>
   <script src="/js/components/applypage.js"></script>
 </body>
