react router working

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="css/main.css" rel="stylesheet"/>
   <link href="css/Home/Home.css" rel="stylesheet"/>
+  <link href="css/Schedule/Schedule.css" rel="stylesheet"/>
 </head>
 
 <body>
  <style> body{opacity: 1;}</style>
 
-  <div id="app">/div>
+  <div id="app"></div>
   <script src="/js/components/vendor.js"></script>
-  <script src="/js/components/homepage.js"></script>
+  <script src="/js/components/index.js"></script>
 </body>
 </html>
