seeds done for appstatus

--- a/resources/views/apply.edge
+++ b/resources/views/apply.edge
@@ -9,7 +9,8 @@
 </head>
 <body>
   <style> body{opacity: 1;}</style>
-  <div id="app"></div>
+  <div id="app" style="background: blue"> </div>
   <script src="/js/components/vendor.js"></script>
+  <script src="/js/components/index.js"></script>
 </body>
 </html>
