added hidden login page

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -8,7 +8,7 @@
   <link href="css/Home/Home.css" rel="stylesheet"/>
   <link href="css/Schedule/Schedule.css" rel="stylesheet"/>
   <link href="css/Apply/Apply.css" rel="stylesheet"/>
-  <link href="css/Apply/Apply.css" rel="stylesheet"/>
+  <link href="css/Login/Login.css" rel="stylesheet"/>
 </head>
 
 <body>
