--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <title>Hello Adonis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="css/main.css" rel="stylesheet"/>
-  <link href="css/Home/Home.css" rel="stylesheet"/>
-  <link href="css/Schedule/Schedule.css" rel="stylesheet"/>
-  <link href="css/Apply/Apply.css" rel="stylesheet"/>
-  <link href="css/Login/Login.css" rel="stylesheet"/>
+  <link href="/css/main.css" rel="stylesheet"/>
+  <link href="/css/Home/Home.css" rel="stylesheet"/>
+  <link href="/css/Schedule/Schedule.css" rel="stylesheet"/>
+  <link href="/css/Apply/Apply.css" rel="stylesheet"/>
+  <link href="/css/Login/Login.css" rel="stylesheet"/>
 </head>
 
 <body>
