--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
 @import 'Header/Header.scss';
-@import 'NotFound/NotFound.scss'
+@import 'NotFound/NotFound.scss';
 
 body {
   opacity: 0;
